[gd_scene load_steps=10 format=3 uid="uid://bjogdxfxebyj7"]

[ext_resource type="Script" path="res://Scripts/Trampoline.gd" id="1_4ndf1"]
[ext_resource type="Texture2D" uid="uid://bteeic6u6btdc" path="res://Assets/Images/Trampoline.svg" id="2_spa0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b213"]
size = Vector2(56, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gah1o"]
atlas = ExtResource("2_spa0h")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc4ne"]
atlas = ExtResource("2_spa0h")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_svo20"]
atlas = ExtResource("2_spa0h")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kat53"]
atlas = ExtResource("2_spa0h")
region = Rect2(192, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0o3m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gah1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc4ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kat53")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yk04"]
size = Vector2(88, 22)

[node name="Trampoline" type="RigidBody2D"]
collision_layer = 32
collision_mask = 38
lock_rotation = true
script = ExtResource("1_4ndf1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8b213")

[node name="Aseprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_a0o3m")
frame_progress = 0.596635

[node name="AnimationCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="BoingSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="Colide" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colide"]
position = Vector2(0, -39)
shape = SubResource("RectangleShape2D_5yk04")

[connection signal="body_entered" from="Colide" to="." method="_on_colide_body_entered"]
